--- a/src/server_manager/bower.json
+++ b/src/server_manager/bower.json
@@ -25,6 +25,7 @@
     "iron-pages": "PolymerElements/iron-pages#^2.0.1",
     "outline-i18n": "Jigsaw-Code/outline-i18n#^0.0.7",
     "paper-button": "PolymerElements/paper-button#^2.0.0",
+    "paper-checkbox": "PolymerElements/paper-checkbox#^2.0.4",
     "paper-dialog": "PolymerElements/paper-dialog#^2.0.1",
     "paper-dialog-scrollable": "PolymerElements/paper-dialog-scrollable#^2.1.0",
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^2.0.2",
