--- a/src/metrics_server/package.json
+++ b/src/metrics_server/package.json
@@ -9,10 +9,14 @@
     "@google-cloud/storage here only to help Typescript code using @google-cloud/bigquery compile"
   ],
   "dependencies": {
-    "@google-cloud/bigquery": "^2.0.3"
+    "@google-cloud/bigquery": "^2.0.3",
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "@types/express": "^4.0.36",
+    "@types/express": "^4.17.2",
     "@google-cloud/storage": "^2.3.1"
+  },
+  "scripts": {
+    "start": "node ./index.js"
   }
 }
