--- a/src/server_manager/package.json
+++ b/src/server_manager/package.json
@@ -35,9 +35,16 @@
     "gulp-posthtml": "^3.0.4",
     "gulp-replace": "^1.0.0",
     "postcss-rtl": "^1.4.0",
-    "posthtml-postcss": "^0.2.6"
+    "posthtml-postcss": "^0.2.6",
+    "prettier": "1.19.1",
+    "pretty-quick": "2.0.1"
   },
   "scripts": {
     "postinstall": "bower install"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "bracketSpacing": false,
+    "trailingComma": "es5"
   }
 }
