--- a/src/server_manager/package.json
+++ b/src/server_manager/package.json
@@ -20,6 +20,7 @@
     "@sentry/electron": "^0.8.1",
     "body-parser": "^1.18.3",
     "bytes": "^3.1.0",
+    "dotenv": "~8.2.0",
     "clipboard-polyfill": "^2.4.6",
     "electron-updater": "^4.1.2",
     "eventemitter3": "^2.0.3",
