--- a/src/shadowbox/server/api.yml
+++ b/src/shadowbox/server/api.yml
@@ -192,7 +192,10 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/AccesKeyName"
+              type: object
+              properties:
+                name:
+                  type: string
             examples:
               '0':
                 value: '{name: "New Key Name"}'
@@ -309,12 +312,6 @@ components:
         bytes:
           type: integer
           minimum: 0
-    AccessKeyName:
-      required:
-        - name
-      properties:
-        name:
-          type: string
     AccessKey:
       required:
         - id
