--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "removeComments": false,
     "noImplicitAny": true,
     "noImplicitThis": true,
+    // We must use commonjs because browserify doesn't support es2015 modules.
+    // TODO: Delete and add "moduleResolution: Node" once we move to webpack.
     "module": "commonjs",
     "rootDir": "src",
     "outDir": "build/server_manager/web_app/js",
