--- a/src/server_manager/package.json
+++ b/src/server_manager/package.json
@@ -21,8 +21,8 @@
     "@sentry/electron": "^0.8.1",
     "body-parser": "^1.18.3",
     "byte-size": "^6.2.0",
-    "dotenv": "~8.2.0",
     "clipboard-polyfill": "^2.4.6",
+    "dotenv": "~8.2.0",
     "electron-updater": "^4.1.2",
     "eventemitter3": "^2.0.3",
     "express": "^4.16.3",
@@ -36,13 +36,14 @@
     "Pin electron version (i.e. 7.0.1, not ~7.0.0) as a workaround for issue https://github.com/electron-userland/electron-builder/issues/4157"
   ],
   "devDependencies": {
-    "@types/node-forge": "^0.6.9",
     "@types/node": "~12.0.0",
+    "@types/node-forge": "^0.6.9",
     "@types/polymer": "^1.2.9",
     "@types/request": "^2.47.1",
     "@types/semver": "^5.5.0",
     "bower": "^1.8.0",
     "browserify": "^14.5.0",
+    "copy-webpack-plugin": "^5.1.1",
     "electron": "7.0.1",
     "electron-builder": "~22.4.0",
     "electron-icon-maker": "^0.0.4",
@@ -53,7 +54,10 @@
     "postcss-rtl": "^1.4.0",
     "posthtml-postcss": "^0.2.6",
     "prettier": "1.19.1",
-    "pretty-quick": "2.0.1"
+    "pretty-quick": "2.0.1",
+    "ts-loader": "^7.0.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "scripts": {
     "postinstall": "bower install"
