--- a/src/server_manager/package.json
+++ b/src/server_manager/package.json
@@ -40,12 +40,11 @@
     "@polymer/paper-tooltip": "^3.0.0",
     "@sentry/electron": "^1.3.0",
     "@webcomponents/webcomponentsjs": "^2.0.0",
-    "body-parser": "^1.18.3",
     "clipboard-polyfill": "^2.4.6",
     "dotenv": "~8.2.0",
     "electron-updater": "^4.1.2",
     "eventemitter3": "^2.0.3",
-    "express": "^4.16.3",
+    "express": "^4.17.1",
     "google-auth-library": "^7.0.2",
     "intl-messageformat": "^7",
     "jsonic": "^0.3.1",
@@ -70,7 +69,7 @@
     "PUPPETEER_CHROMIUM_REVISION": "693954"
   },
   "devDependencies": {
-    "@types/node": "~12.0.0",
+    "@types/node": "^15.12.2",
     "@types/node-forge": "^0.6.9",
     "@types/polymer": "^1.2.9",
     "@types/puppeteer": "^5.4.2",
@@ -78,7 +77,7 @@
     "@types/semver": "^5.5.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.3",
-    "electron": "7.0.1",
+    "electron": "^13.1.2",
     "electron-builder": "~22.4.0",
     "electron-icon-maker": "^0.0.4",
     "electron-notarize": "^0.2.1",
