--- a/.github/workflows/release_manager.yml
+++ b/.github/workflows/release_manager.yml
@@ -1,18 +1,20 @@
-name: Build and Test
+name: Release Manager
 
-on: push
+on: 
+  push:
+    tags:
+      - "v[0-9]"
 
 jobs:
-  manager:
-    name: Build and Test
-    
+  release_manager:
+    name: Release Manager
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04]
+        os: [ubuntu-20.04, macos-latest]
       # Don't cancel jobs on other platforms if one fails
       fail-fast: false
-      
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v1
@@ -38,28 +40,20 @@ jobs:
       
       - name: Install dependencies
         run: yarn --prefer-offline
-
-      - name: Lint
-        run: yarn lint
-
-      - name: Manager
-        run: |
-          SENTRY_DSN='test' yarn do server_manager/electron_app/release_linux
-          yarn do server_manager/test
-
-      - name: Shadowbox
-        if: runner.os == 'Linux'
-        run: |
-          yarn do shadowbox/server/build
-          yarn do shadowbox/test
-          yarn do shadowbox/integration_test/run
       
-      - name: Metrics Server
+      - name: Release Linux
         if: runner.os == 'Linux'
+        run: yarn do server_manager/electron_app/release_linux
+
+      - name: Release MacOS
+        if: runner.os == 'macOS'
         run: |
-          yarn do metrics_server/build
-          yarn do metrics_server/test
+          openssl aes-256-cbc -K TODOENCRYPTEDKEY -iv TODOENCRYPTEDIV -in macos-signing-certificate.p12.enc -out macos-signing-certificate.p12 -d
+          pwd #TODO REMOVE
+          export CSC_LINK=$(pwd)/macos-signing-certificate.p12
+          yarn do server_manager/electron_app/release_macos
       
-      - name:  Sentry Webhook
-        if: runner.os == 'Linux'
-        run: yarn do sentry_webhook/build
+      - name: Deploy
+        uses: softprops/action-gh-release@v1
+        with:
+          files: "build/server_manager/electron_app/static/dist/*.*"
