--- a/.github/workflows/release_server.yml
+++ b/.github/workflows/release_server.yml
@@ -1,35 +1,53 @@
 name: Release Server
 
-run-on: ubuntu-20.04
+on: 
+  schedule:
+    - cron: '0 0 * * *'
 
-steps:
-  - name: Checkout repo
-    uses: actions/checkout@v1
+jobs: 
+  release_shadowbox:
+    name: Release Shadowbox Canary
+    runs-on: ubuntu-20.04
+    environment: Deploy Shadowbox Canary
 
-  - name: Install Node.js, NPM and Yarn
-    uses: actions/setup-node@v1
-    with:
-      node-version: 12
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v1
 
-  - name: Show Environment Info
-    run: yarn -v
+      - name: Install Node.js, NPM and Yarn
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
 
-  - name: Get yarn cache directory path
-    id: yarn-cache-dir-path
-    run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Show Environment Info
+        run: yarn -v
 
-  - name: Check yarn cache
-    uses: actions/cache@v2
-    with:
-      path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-      key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-      restore-keys: ${{ runner.os }}-yarn-
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
 
-  - name: Install dependencies
-    run: yarn --prefer-offline
+      - name: Check yarn cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: ${{ runner.os }}-yarn-
 
-  - name: Shadowbox Unit Tests
-    run: yarn do shadowbox/test
+      - name: Install dependencies
+        run: yarn --prefer-offline
 
-  - name: Shadowbox Integration Tests
-    run: yarn do shadowbox/integration_test/run
+      - name: Shadowbox Unit Tests
+        run: yarn do shadowbox/test
+
+      - name: Shadowbox Integration Tests
+        run: yarn do shadowbox/integration_test/run
+
+      - name: Deploy Canary
+        run: |
+          TAG=server-$(date -I)
+          yarn do shadowbox/docker/build
+          docker login quay.io -u="$QUAY_IO_USERNAME" -p="$QUAY_IO_PASSWORD"
+          docker tag outline/shadowbox quay.io/outline/shadowbox:$TAG
+          docker push quay.io/outline/shadowbox:$TAG
+          docker tag outline/shadowbox quay.io/outline/shadowbox:daily
+          docker push quay.io/outline/shadowbox:daily
