--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,10 +6,8 @@ jobs:
   manager:
     name: Build and Test
     
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-20.04
     strategy:
-      matrix:
-        os: [ubuntu-16.04]
       # Don't cancel jobs on other platforms if one fails
       fail-fast: false
       
@@ -48,18 +46,15 @@ jobs:
           yarn do server_manager/test
 
       - name: Shadowbox
-        if: runner.os == 'Linux'
         run: |
           yarn do shadowbox/server/build
           yarn do shadowbox/test
           yarn do shadowbox/integration_test/run
       
       - name: Metrics Server
-        if: runner.os == 'Linux'
         run: |
           yarn do metrics_server/build
           yarn do metrics_server/test
       
       - name:  Sentry Webhook
-        if: runner.os == 'Linux'
         run: yarn do sentry_webhook/build
