--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,14 +5,15 @@ on: push
 jobs:
   manager:
     name: Build and Test
-
+    
     runs-on: ${{ matrix.os }}
     strategy:
+      matrix:
+        # This matches the Ubuntu version used in our Travis releases
+        os: [ubuntu-16.04]
       # Don't cancel jobs on other platforms if one fails
       fail-fast: false
-      matrix:
-        os: [ubuntu-16.04, ubuntu-18.04, ubuntu-20.04]
-
+      
     steps:
       - name: Checkout repo
         uses: actions/checkout@v1
@@ -23,9 +24,7 @@ jobs:
           node-version: 12
 
       - name: Show Environment Info
-        run: |
-          yarn -v
-          docker --version
+        run: yarn -v
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
@@ -37,7 +36,7 @@ jobs:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: ${{ runner.os }}-yarn-
-
+      
       - name: Install dependencies
         run: yarn --prefer-offline
 
@@ -50,15 +49,18 @@ jobs:
           yarn do server_manager/test
 
       - name: Shadowbox
+        if: runner.os == 'Linux'
         run: |
           yarn do shadowbox/server/build
           yarn do shadowbox/test
           yarn do shadowbox/integration_test/run
-
+      
       - name: Metrics Server
+        if: runner.os == 'Linux'
         run: |
           yarn do metrics_server/build
           yarn do metrics_server/test
-
+      
       - name:  Sentry Webhook
+        if: runner.os == 'Linux'
         run: yarn do sentry_webhook/build
