--- a/.github/workflows/release_manager.yml
+++ b/.github/workflows/release_manager.yml
@@ -12,7 +12,7 @@ jobs:
   release_manager:
     name: Release Manager
     runs-on: ${{ matrix.os }}
-    environment: Deploy Outline Manager
+    environment: Production Outline Manager
     strategy:
       matrix:
         os: [ubuntu-20.04, macos-latest]
