--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
           restore-keys: ${{ runner.os }}-yarn-
 
       - name: Install dependencies
-        run: yarn --prefer-offline
+        run: NODE_DTRACE_PROVIDER_REQUIRE=hard yarn --prefer-offline
 
       - name: Lint
         run: yarn lint
