--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,13 @@
 name: Build and Test
 
-on: push
+on: 
+  pull_request:
+    branches:
+      - master
+    types:
+      - opened
+      - synchronize
+
 
 jobs:
   manager:
