--- a/src/shadowbox/package.json
+++ b/src/shadowbox/package.json
@@ -28,6 +28,8 @@
     "@types/randomstring": "^1.1.6",
     "@types/restify": "^8.4.2",
     "@types/restify-cors-middleware": "^1.0.1",
+    "@types/tmp": "^0.2.1",
+    "tmp": "^0.2.1",
     "ts-loader": "^7.0.4",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
