--- a/src/shadowbox/docker/Dockerfile
+++ b/src/shadowbox/docker/Dockerfile
@@ -24,7 +24,7 @@ WORKDIR /
 # Don't copy node_modules and other things not needed for install.
 COPY package.json package-lock.json ./
 COPY src/shadowbox/package.json src/shadowbox/
-RUN npm install
+RUN npm ci
 
 # We copy the source code only after npm install, so that source code changes don't trigger re-installs.
 COPY scripts scripts/
